--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,8 @@
 <div class="container-fluid">
   <div class="row">
     <app-sidebar></app-sidebar>
-    <router-outlet></router-outlet>
+    <main class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-3">
+    	<router-outlet></router-outlet>
+    </main>
   </div>
 </div>    
