--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,6 +1,5 @@
-<main class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-3">
+
   <h1>Time Logger</h1>
 
-  <app-logger ></app-logger>
+  <app-timmer ></app-timmer>
   <app-log-table></app-log-table>
-</main>
