--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <nav class="col-sm-3 col-md-2 hidden-xs-down bg-faded sidebar">
   <ul class="nav nav-pills flex-column">
     <li class="nav-item">
-      <a class="nav-link active" href="#">Logger <span class="sr-only">(current)</span></a>
+      <a class="nav-link active" href="#" routerLink='/timer'>Logger <span class="sr-only">(current)</span></a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#">Projects</a>
@@ -10,7 +10,7 @@
       <a class="nav-link" href="#">Analytics</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Settings</a>
+      <a class="nav-link" href="#" routerLink='/settings'>Settings</a>
     </li>
   </ul>
 
