--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
   <div class="row">
     <app-sidebar></app-sidebar>
     <main class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-3">
+    	<flash-messages></flash-messages>
     	<router-outlet></router-outlet>
     </main>
   </div>
