--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -12,7 +12,7 @@
     <li class="nav-item">
       <a class="nav-link" href="#" routerLink='/settings'>Settings</a>
     </li>
-    <li class="nav-item">
+    <!-- <li class="nav-item">
       <a class="nav-link" href="#" routerLink='/signup'>Register</a>
     </li>
     <li class="nav-item">
@@ -20,7 +20,7 @@
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#" (click)="onSignOutClick()">Logout</a>
-    </li>
+    </li> -->
 
   </ul>
 
