change sidebar and navbar links

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,10 @@
 
 <div class="container-fluid">
   <div class="row">
-    <app-sidebar></app-sidebar>
-    <main class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-3">
+<app-sidebar *ngIf="isLoggedIn"></app-sidebar>
+    <main 
+    [ngClass]="{'col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-4': isLoggedIn, 'col-sm-12 col-md-12 pt-3': !isLoggedIn}"
+    >
     	<flash-messages></flash-messages>
     	<router-outlet></router-outlet>
     </main>
