--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,14 +1,14 @@
 <nav class="col-sm-3 col-md-2 hidden-xs-down bg-faded sidebar">
   <ul class="nav nav-pills flex-column">
     <li class="nav-item">
-      <a class="nav-link" href="#" routerLink='/timer'>Logger <span class="sr-only">(current)</span></a>
+      <a class="nav-link" href="#" routerLink='/timer'>Timer </a>
     </li>
-    <li class="nav-item">
+  <!--   <li class="nav-item">
       <a class="nav-link" href="#">Projects</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#">Analytics</a>
-    </li>
+    </li> -->
     <li class="nav-item">
       <a class="nav-link" href="#" routerLink='/settings'>Settings</a>
     </li>
