add projects component/service

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -3,10 +3,10 @@
     <li class="nav-item">
       <a class="nav-link" href="#" routerLink='/timer'>Timer </a>
     </li>
-  <!--   <li class="nav-item">
-      <a class="nav-link" href="#">Projects</a>
-    </li>
     <li class="nav-item">
+      <a class="nav-link" href="#" routerLink='/projects'>Projects</a>
+    </li>
+    <!--    <li class="nav-item">
       <a class="nav-link" href="#">Analytics</a>
     </li> -->
     <li class="nav-item">
