--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,36 +1,14 @@
-<nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse">
-      <button class="navbar-toggler navbar-toggler-right hidden-lg-up" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <a class="navbar-brand" href="/">Time Logger App</a>
-
-      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-        <ul class="navbar-nav mr-auto">
-        <!--   <li class="nav-item">
-            <a class="nav-link" href="#">Home </a>
-          </li>         -->
-        </ul>
-
-        <ul class="navbar-nav">
-         <li *ngIf="isLoggedIn" class="nav-item">
-            <a class="nav-link"> Welcome, {{ loggedUser.email }}</a>
-          </li>
-     <!--      <li *ngIf="isLoggedIn" class="nav-item">
-            <a class="nav-link" routerLink='/settings'>Settings</a>
-          </li> -->
-    
-          <li *ngIf="!isLoggedIn" class="nav-item">
-            <a class="nav-link" href="#" routerLink='/signup'>Register</a>
-          </li>
-          <li *ngIf="!isLoggedIn" class="nav-item">
-            <a class="nav-link" href="#" routerLink='/signin'>Login</a>
-          </li>
-          <li *ngIf="isLoggedIn" class="nav-item">
-            <a class="nav-link" href="#" (click)="onSignOutClick()">Logout</a>
-          </li>
-
-
-
-        </ul>       
-      </div>
-    </nav>
+<nav class="navbar navbar-toggleable-md top-navbar fixed-top d-none d-md-block ">
+	<a class="navbar-brand" href="/"> Time Logger</a>
+	<ul class="nav float-right">
+		<li *ngIf="isLoggedIn" class="nav-item">          
+			<button class="btn btn-info rounded-right"> {{ loggedUser.email }}</button>
+		</li>
+		<li *ngIf="isLoggedIn" class="nav-item">
+			<a class="nav-link" href="#" routerLink='/settings'><i class="material-icons">settings</i></a>
+		</li>
+		<li *ngIf="isLoggedIn" class="nav-item">
+			<a class="nav-link" href="#" (click)="onSignOutClick()"><i class="material-icons">settings_ethernet</i></a>
+		</li>
+	</ul>
+</nav>
