--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,16 +1,26 @@
-<nav class="col-sm-3 col-md-2 hidden-xs-down bg-faded sidebar">
-  <ul class="nav nav-pills flex-column">
-    <li class="nav-item">
-      <a class="nav-link" href="#" routerLink='/timer'>Timer </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#" routerLink='/projects'>Projects</a>
-    </li>
+<nav class="navbar navbar-expand-md navbar-light navbar-fixed-left ">
+	<div class="navbar-header d-md-none d-block">
+		<a class="navbar-brand" href="#">Time Logger</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+
+	</div>
+	<div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+		<ul class="navbar-nav mr-auto">
+			
+
+			<li class="nav-item">
+				<a class="nav-link" href="#" routerLink='/timer'><i class="material-icons">alarm</i> Timer </a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#" routerLink='/projects'> <i class="material-icons">assignment</i> Projects</a>
+			</li>
     <!--    <li class="nav-item">
       <a class="nav-link" href="#">Analytics</a>
     </li> -->
     <li class="nav-item">
-      <a class="nav-link" href="#" routerLink='/settings'>Settings</a>
+    	<a class="nav-link" href="#" routerLink='/settings'><i class="material-icons">settings</i>  Settings</a>
     </li>
     <!-- <li class="nav-item">
       <a class="nav-link" href="#" routerLink='/signup'>Register</a>
@@ -24,5 +34,5 @@
 
   </ul>
 
-
+</div>
 </nav>
