--- a/src/app/modules/shared/sidebar/sidebar.component.html
+++ b/src/app/modules/shared/sidebar/sidebar.component.html
@@ -11,7 +11,14 @@
 			
 
 			<li class="nav-item">
-				<a class="nav-link" href="#" routerLink='/timer'><i class="material-icons">alarm</i> Timer </a>
+				<a class="nav-link" href="#" routerLink='/timer'><i class="material-icons">alarm</i> Timer 
+					<div class="float-right" *ngIf="timer | async as timer_">
+					<span *ngIf="timer_.running">
+							({{ timer_.time.minutes }}:{{ timer_.time.seconds}})
+						</span>
+					</div>
+
+				</a>
 			</li>
 			<li class="nav-item">
 				<a class="nav-link" href="#" routerLink='/projects'> <i class="material-icons">assignment</i> Projects</a>
