--- a/src/app/modules/shared/sidebar/sidebar.component.html
+++ b/src/app/modules/shared/sidebar/sidebar.component.html
@@ -11,7 +11,7 @@
 			
 
 			<li class="nav-item">
-				<a class="nav-link" href="#" routerLink='/timer'><i class="material-icons">alarm</i> Timer 
+				<a class="nav-link" href="#" routerLink='/app/timer'><i class="material-icons">alarm</i> Timer 
 					<div class="float-right" *ngIf="timer | async as timer_">
 					<span *ngIf="timer_.running">
 							({{ timer_.time.minutes }}:{{ timer_.time.seconds}})
@@ -21,13 +21,13 @@
 				</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="#" routerLink='/projects'> <i class="material-icons">assignment</i> Projects</a>
+				<a class="nav-link" href="#" routerLink='/app/projects'> <i class="material-icons">assignment</i> Projects</a>
 			</li>
     <!--    <li class="nav-item">
       <a class="nav-link" href="#">Analytics</a>
     </li> -->
     <li class="nav-item">
-    	<a class="nav-link" href="#" routerLink='/settings'><i class="material-icons">settings</i>  Settings</a>
+    	<a class="nav-link" href="#" routerLink='/app/settings'><i class="material-icons">settings</i>  Settings</a>
     </li>
     <!-- <li class="nav-item">
       <a class="nav-link" href="#" routerLink='/signup'>Register</a>
