--- a/src/styles.css
+++ b/src/styles.css
@@ -1,72 +1,255 @@
-/*
- * Base structure
+
+#home .navbar{
+	padding-top: 20px;  
+}
+
+
+
+header{
+
+	min-height: 100vh !important;
+	padding-top: 100px; 
+	position: relative;
+	
+}
+
+footer{
+	background-color: #2C2C2C;
+	min-height: 10vh; 
+	color: #E6E6E6;
+}
+
+section.section{
+	padding-top: 90px;
+	padding-bottom: 90px;
+	position: relative;
+	background-position: center center;
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+
+.bg-gray{
+	background-color: #E5E5E5;
+}
+
+.bg-kirmizi{
+	background-color: #E53838;
+}
+
+.featured-section{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+
+
+}
+
+
+
+.navbar.fixed-top.fixed-theme {
+	/*background-color: rgba(55,30,65,.7); */   
+	background-color: rgba(255,255,255,.9); 
+	border-color: #371E41;
+	box-shadow: 0 0 5px rgba(0,0,0,.8);
+	padding-top: 10px;  
+	color: #D6CFCF;
+}
+
+.navbar.fixed-top.fixed-theme li a,
+.navbar.fixed-top.fixed-theme .navbar-brand
+{
+
+	color: #D6CFCF;
+}
+
+.navbar-brand.fixed-theme {
+	font-size: 18px;
+}
+
+.navbar-container.fixed-theme {
+	padding: 0;
+}
+
+.navbar-brand.fixed-theme,
+.navbar-container.fixed-theme,
+.navbar.fixed-top.fixed-theme,
+.navbar-brand,
+.navbar-container{
+	transition: 0.4s;
+	-webkit-transition:  0.4s;
+}
+.navbar-brand,
+.navbar-container,
+.navbar.fixed-top,
+.navbar-brand,
+.navbar-container{
+	transition: 0.4s;
+	-webkit-transition:  0.4s;
+}
+
+
+
+/*!
+ * bootstrap-navbar-toggler v0.9.0 (https://skywalkapps.github.io/bootstrap-navbar-toggler)
+ * Copyright 2017 Martin Staněk
+ * Licensed under MIT
  */
-app-main{
-	width: 100%;
-}
-/* Move down content because we have a fixed navbar that is 50px tall */
-body {
-  padding-top: 50px;
-}
+ .navbar-toggler {
+ 	border-width: 2px;
+ 	border-radius: 6px;
+ 	padding: 0.75rem 0.75rem;
+ 	background-color: rgba(255, 255, 255, 0.4);
+ }
+ .navbar-toggler:focus {
+ 	outline: none;
+ }
+ .navbar-toggler.navbar-toggler-left {
+ 	float: left;
+ 	margin-left: 15px;
+ }
+ .navbar-toggler-label {
+ 	display: inline-block;
+ 	vertical-align: top;
+ 	color: #888;
+ 	font-size: 14px;
+ 	font-weight: bold;
+ 	-webkit-text-transform: uppercase;
+ }
+ .navbar-toggler-label + .navbar-toggler-icon {
+ 	margin-left: 4px;
+ }
+ .navbar-inverse .navbar-toggler-label {
+ 	color: #fff;
+ }
+ .navbar-toggler-icon {
+ 	display: inline-block;
+ }
+ .navbar-toggler-icon > .icon-bar + .icon-bar {
+ 	margin-top: 0;
+ }
+ .navbar-toggler .icon-bar {
+ 	
+ 	width: 100%;
+ 	height: 2px;
+ 	border-radius: 2px;
+ 	background-color: rgba(0, 0, 0, 0.4);
+ }
+ .navbar-toggler .icon-bar {
 
-/*
- * Typography
- */
+ }
+ /* Icon 1 */
+ .navbar-toggler-icon {
+ 	position: relative;
+ 	width: 22px;
+ 	height: 14px;
+ 	-webkit-transform: rotate(0deg);
+ 	-webkit-transition: 0.5s ease-in-out;
+ 	cursor: pointer;
+ 	background-image: none !important;
+ }
+ .navbar-toggler-icon span {
+ 	display: block;
+ 	position: absolute;
+ 	opacity: 1;
+ 	left: 0;
+ 	-webkit-transition: 0.25s ease-in-out;
+ }
+ .navbar-toggler.collapsed .icon-bar:nth-child(1) {
+ 	top: 0;
+ }
+ .navbar-toggler.collapsed .icon-bar:nth-child(2) {
+ 	top: 6px;
+ }
+ .navbar-toggler.collapsed .icon-bar:nth-child(3) {
+ 	top: 12px;
+ }
+ .navbar-toggler:not(.collapsed) .icon-bar:nth-child(1) {
+ 	top: 6px;
+ 	transform: rotate(45deg);
+ }
+ .navbar-toggler:not(.collapsed) .icon-bar:nth-child(2) {
+ 	opacity: 0;
+ }
+ .navbar-toggler:not(.collapsed) .icon-bar:nth-child(3) {
+ 	top: 6px;
+ 	transform: rotate(-45deg);
+ }
 
-h1 {
-  margin-bottom: 20px;
-  padding-bottom: 9px;
-  border-bottom: 1px solid #eee;
-}
 
-/*
- * Sidebar
- */
 
-.sidebar {
-  position: fixed;
-  top: 51px;
-  bottom: 0;
-  left: 0;
-  z-index: 1000;
-  padding: 20px;
-  overflow-x: hidden;
-  overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-  border-right: 1px solid #eee;
-}
+ /*signupform*/
 
-/* Sidebar navigation */
-.sidebar {
-  padding-left: 0;
-  padding-right: 0;
-}
 
-.sidebar .nav {
-  margin-bottom: 20px;
-}
+ .form-control{	
+ 	min-height: 41px;
+ 	box-shadow: none;
+ 	border-color: #e1e1e1;
+ }
+ .form-control:focus{
+ 	border-color: #00cb82;
+ }	
+ .form-control, .btn{        
+ 	border-radius: 3px;
+ }
+ .form-header{
+ 	margin: 0px -30px 20px;
+ 	padding: 30px 30px 10px;
+ 	text-align: center;
+ 	background: #00cb82;
+ 	border-bottom: 1px solid #eee;
+ 	color: #fff;
+ }
+ .form-header h2{
+ 	font-size: 34px;
+ 	font-weight: bold;
+ 	margin: 0 0 10px;
+ 	font-family: 'Pacifico', sans-serif;
+ }
+ .form-header p{
+ 	margin: 10px 0 0  ;
+ 	font-size: 17px;
+ 	line-height: normal;
+ 	font-family: 'Courgette', sans-serif;
+ }
+ .signup-form{
+ 	width: 100%;
+ 	margin: 0 auto;	
+ 	padding: 0 0;	
+ }
+ .signup-form form{
+ 	color: #999;
+ 	border-radius: 3px;
+ 	margin-bottom: 15px;
+ 	background: #f0f0f0;
+ 	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+ 	padding: 0px 30px 10px;
+ }
+ .signup-form .form-group{
+ 	margin-bottom: 10px;
+ }		
+ .signup-form label{
+ 	font-weight: normal;
+ 	font-size: 13px;
+ }
+ .signup-form input[type="checkbox"]{
+ 	margin-top: 2px;
+ }
+ .signup-form .btn{        
+ 	font-size: 16px;
+ 	font-weight: bold;
+ 	background: #00cb82;
+ 	border: none;
+ 	min-width: 200px;
+ }
+ .signup-form .btn:hover, .signup-form .btn:focus{
+ 	/*background: #00b073 !important;*/
+ 	outline: none;
+ }
+ .signup-form a{
+ 	color: #7d55c7;		
+ }
+ .signup-form a:hover{
+ 	text-decoration: underline;
+ }
 
-.sidebar .nav-item {
-  width: 100%;
-}
-
-.sidebar .nav-item + .nav-item {
-  margin-left: 0;
-}
-
-.sidebar .nav-link {
-  border-radius: 0;
-}
-
-/*
- * Dashboard
- */
-
- /* Placeholders */
-.placeholders {
-  padding-bottom: 3rem;
-}
-
-.placeholder img {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
