--- a/src/app/modules/shared/navbar/navbar.component.html
+++ b/src/app/modules/shared/navbar/navbar.component.html
@@ -23,7 +23,7 @@
 					</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#" (click)="onSignOutClick()" ><i class="material-icons">exit_to_app</i></a>
+					<a class="nav-link" (click)="onSignOutClick()" ><i class="material-icons">exit_to_app</i></a>
 				</li>
 			</ul>
 		</nav>
