--- a/src/app/modules/shared/sidebar/sidebar.component.html
+++ b/src/app/modules/shared/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 	<nav class="navbar navbar-expand-md navbar-light navbar-fixed-left navbar-dark collapsed ">
 		<div class="navbar-header justify-content-center">
-			<a class="navbar-brand " href="#"> <i class="material-icons">timer</i> <span class="txt"> Time Logger </span></a>
+			<a class="navbar-brand " routerLink="/"> <i class="material-icons">timer</i> <span class="txt"> Time Logger </span></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#SideNav" aria-controls="SideNav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
