--- a/src/app/modules/projects/projects/projects.component.html
+++ b/src/app/modules/projects/projects/projects.component.html
@@ -16,22 +16,22 @@
       <div *ngIf="project_name.errors?.required && project_name.touched" class="alert alert-danger">Project must have a Name !</div>
       <div *ngIf="project_name.errors?.minlength && project_name.touched" class="alert alert-danger">Too short name</div>
     </div>
-    <button type="submit" name="submit" class="btn btn-info btn-block">Add New Project</button>
+    <button type="submit" name="submit" class="btn btn-info btn-lg btn-block">Add New Project</button>
   </form>
 </div>
-<hr>
+<br>
 <table class="table table-striped">
   <thead>
       <tr>
         <td>Project Name</td>
-        <td>Actions</td>
+        <td class="d-flex justify-content-end">Actions</td>
       </tr>
   </thead>
   <tbody>
       <tr *ngFor="let project of projects; trackBy TrackLogByFn ">
-        <td>{{ project.name }}</td>
-        <td>
-            <button (click)="deleteProject(project.$id)" type="button" class="btn btn-sm btn-danger">Delete</button>          
+        <td><h3>{{ project.name }}</h3></td>
+        <td class="d-flex justify-content-end">
+            <button (click)="deleteProject(project.$id)" type="button" class="btn btn-sm btn-danger"><i class="material-icons">delete_forever</i></button>          
         </td>
       </tr>
   </tbody>
