--- a/src/app/modules/timer/timmer/timmer.component.html
+++ b/src/app/modules/timer/timmer/timmer.component.html
@@ -38,10 +38,10 @@
 	<div class="timer-switch">
 		<ul>
 			<li class="active">
-				<a href="" class="btn btn-sm"><i class="material-icons">timer</i></a>
+				<a  class="btn btn-sm"><i class="material-icons">timer</i></a>
 			</li>
 			<li class="">
-				<a href="" class="btn btn-sm"><i class="material-icons">timelapse</i></a>
+				<a  class="btn btn-sm"><i class="material-icons">timelapse</i></a>
 			</li>
 		</ul>
 	</div>
