--- a/src/app/modules/user/signin/signin.component.html
+++ b/src/app/modules/user/signin/signin.component.html
@@ -2,7 +2,7 @@
 	<main class="wrapper">
 		<nav id="navbar" class="navbar navbar-expand-md fixed-top justify-content-between navbar-toggleable-md navbar-dark  ">
 			<div class="container-fluid">
-				<a class="navbar-brand " href="#"> <i class="material-icons">timer</i> Time Logger</a>
+				<a class="navbar-brand " href="#" routerLink="/"> <i class="material-icons">timer</i> Time Logger</a>
 
 			</div>
 
@@ -18,31 +18,48 @@
 				</div>
 				<div class="right col-md-6 col-sm-12 d-flex justify-content-center align-items-center">	
 					<div class="signin-form">
-						<form (submit)="onSubmit()">
+  
+
+						<form novalidate #signinForm="ngForm" (submit)="onSubmit(signinForm)">
 							<div class="form-header">
 								<h2>Sign In</h2>
-								<p>Start tracking you activites time!</p>
+								<p>Start tracking your activities!</p>
+							</div>
+							<div class="form-label-group" *ngIf="signInFormHasError">
+								<div class="alert alert-danger">{{ signInFormError }}</div>
 							</div>
 
-							<div class="form-label-group">
-								<input type="email" id="inputEmail" class="form-control" [(ngModel)]="email" name="email" required>
+              	<div class="form-label-group">					
+								<input 
+								  type="email"
+								  id="inputEmail"
+								  class="form-control"
+								  ngModel
+								  name="email"
+								  placeholder="Your Email" required>
 								<label for="inputEmail">Email address</label>
 							</div>
-
-							<div class="form-label-group">				
-								<input type="password" id="inputPassword" class="form-control" [(ngModel)]="password" name="password" required>						
+							<div class="form-label-group">					
+								<input 
+								  type="password"
+								  id="inputPassword"
+								  class="form-control"
+								  ngModel
+								  name="password"
+								  placeholder="Password" required>
 								<label for="inputPassword">Password</label>
 							</div>
-
+<!-- 
 							<div class="form-group">
 								<label class="checkbox-inline"><input type="checkbox" required="required"> Keep me in !</label>
-							</div>
+							</div> -->
 							<div class="form-group">
 								<button type="submit" class="btn btn-primary btn-block btn-lg">Sign in</button>
 							</div>	
 						</form>
 						<div class="text-center small">Don't have an account? <a href="#" routerLink="/">Signup here</a></div>
 					</div>
+
 				</div>
 			</div>
 		</div>
