--- a/src/app/modules/user/signup/signup.component.html
+++ b/src/app/modules/user/signup/signup.component.html
@@ -4,7 +4,7 @@
   <div class="col-md-6 offset-md-3">
     <div class="card">
       <div class="card-block">        
-        <h1 class="text-center">Register</h1>
+        <h1 (signupSubmited)="externalSignup($event)" class="text-center">Register</h1>
         <form (submit)="onSubmit()">
         <div class="form-group">
             <label for="email">Name</label>
